# axebpf

./: Cargo.toml  README.md
src/: attach.rs  cache.rs  context.rs  event.rs  helpers.rs  insn_slot.rs  kops.rs  kprobe_handler.rs  kprobe_manager.rs  lib.rs  macros.rs  map_ops.rs  maps.rs  output.rs  page_table.rs  platform.rs  runtime.rs  symbols.rs  trace_ops.rs  tracepoint.rs  vmap.rs
src/examples/: mod.rs  runtime_example.rs
src/probe/: mod.rs
src/probe/hprobe/: handler.rs  manager.rs  mod.rs  ops.rs
src/probe/kprobe/: addr_translate.rs  handler.rs  manager.rs  mod.rs
src/programs/: bytecode.rs  mod.rs  registry.rs
src/tracepoints/: histogram.rs  hypervisor_helpers.rs  mod.rs  registry.rs  shell.rs  stats.rs  vmm.rs
tests/: attach_tests.rs  guest_addr_translate_tests.rs  guest_kprobe_context_tests.rs  guest_kprobe_handler_tests.rs  guest_kprobe_manager_tests.rs  helpers_tests.rs  histogram_tests.rs  hprobe_coexistence_tests.rs  hretprobe_event_tests.rs  hypervisor_helpers_tests.rs  maps_tests.rs  runtime_tests.rs  stats_tests.rs  symbols_tests.rs  tracepoint_tests.rs
